ta-connector-demo-ext/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <displayFormat>Doc-{00000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>