ta-connector-demo-ext/main/default/objects/Document__c/fields/AllocatedTips__c.field-meta.xml
<CustomField>
    <fullName>AllocatedTips__c</fullName>
    <label>Allocated Tips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>