ta-connector-demo-ext/main/default/objects/Document__c/fields/Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance__c</fullName>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>