ta-connector-demo-ext/main/default/objects/Document__c/fields/Dependent_Care_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Care_Benefits__c</fullName>
    <label>Dependent Care Benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>