ta-connector-demo-ext/main/default/objects/Document__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>