ta-connector-demo-ext/main/default/objects/Document__c/fields/MedicareTaxWithheld__c.field-meta.xml
<CustomField>
    <fullName>MedicareTaxWithheld__c</fullName>
    <label>Medicare Tax Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>