ta-connector-demo-ext/main/default/objects/Document__c/fields/MedicareWages__c.field-meta.xml
<CustomField>
    <fullName>MedicareWages__c</fullName>
    <label>Medicare Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>