ta-connector-demo-ext/main/default/objects/Document__c/fields/Name_Value_Pairs__c.field-meta.xml
<CustomField>
    <fullName>Name_Value_Pairs__c</fullName>
    <label>Name Value Pairs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>