ta-connector-demo-ext/main/default/objects/Document__c/fields/Revenue_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Last_Year__c</fullName>
    <label>Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>