ta-connector-demo-ext/main/default/objects/Document__c/fields/SS_Wages__c.field-meta.xml
<CustomField>
    <fullName>SS_Wages__c</fullName>
    <label>SS Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>