ta-connector-demo-ext/main/default/objects/Document__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>