ta-connector-demo-ext/main/default/objects/Document__c/fields/SSTips__c.field-meta.xml
<CustomField>
    <fullName>SSTips__c</fullName>
    <label>SS Tips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>