ta-connector-demo-ext/main/default/objects/Document__c/fields/Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number__c</fullName>
    <label>Tax Identification Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>