ta-connector-demo-ext/main/default/objects/Document__c/fields/Tax_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Tax_Withheld__c</fullName>
    <label>Tax Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>