ta-connector-demo-ext/main/default/objects/Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>