ta-connector-demo-ext/main/default/objects/Document__c/fields/Wages_Tips__c.field-meta.xml
<CustomField>
    <fullName>Wages_Tips__c</fullName>
    <label>Wages Tips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>