ta-connector-demo-ext/main/default/objects/Document__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>