ta-connector-demo-ext/main/default/objects/Document__c/recordTypes/Bank_Statement.recordType-meta.xml
<RecordType>
    <fullName>Bank_Statement</fullName>
    <active>true</active>
    <label>Bank Statement</label>
</RecordType>