ta-connector-demo-ext/main/default/objects/Document__c/recordTypes/Credit_Application.recordType-meta.xml
<RecordType>
    <fullName>Credit_Application</fullName>
    <active>true</active>
    <label>Credit Application</label>
</RecordType>