ta-connector-demo-ext/main/default/objects/Document__c/recordTypes/W2.recordType-meta.xml
<RecordType>
    <fullName>W2</fullName>
    <active>true</active>
    <label>W2</label>
</RecordType>